--- a/css/app.css
+++ b/css/app.css
@@ -114,7 +114,7 @@ body {
 header.main-header {
     width: 200px;
     height: calc(100vh - 90px);
-    background-color: blue; /* DEBUG RULE */
+    background-color: rgb(0, 0, 0);
     flex-shrink: 0;
 }
 
@@ -123,13 +123,33 @@ header.main-header {
     height: 90px;
     flex-shrink: 0;
     align-self: flex-end;
-    background-color: red;
+    background-color: rgb(40, 40, 40);
     position: fixed;
 }
 
 .main-content > .container {
     height: 90px;
-    background-color: aqua;
+    background-color: rgb(8, 11, 19);
     width: 100%;
     position: fixed;
+}
+
+/* MEDIA MOBILE */
+
+@media only screen and (max-width: 575px) {
+
+header.main-header {
+    width: 80px;
+    height: calc(100vh - 90px);
+    background-color: rgb(0, 0, 0);
+    flex-shrink: 0;
+}
+
+body {
+    background-color: black;
+    display: flex;
+    height: 100vh;
+    width: calc(100% - 80px)
+}
+
 }
