--- a/css/app.css
+++ b/css/app.css
@@ -162,6 +162,7 @@ main.main-content {
     height: 89%;
     width: 100%;
     margin-top: 90px;
+    padding: 0 20px;
 }
 
 .row {
@@ -296,7 +297,10 @@ main.main-content {
 .audio-controls,
 .volume-control,
 .audio-controls,
-.album-nav {
+.album-nav,
+.recent,
+.for-u,
+.famous-artist {
 	display: flex;
 	align-items: center;
 }
@@ -371,6 +375,7 @@ main.main-content {
 
 .album-nav {
     padding: 17px;
+    align-items: center;
 }
 
 .album-nav ul li {
@@ -379,8 +384,30 @@ main.main-content {
     font-size: 17px;
 }
 
+.container-big img {
+    max-width: 270px;
+}
+
+.recent a {
+    margin-right: 15px;    
+}
+
 .album-nav {
     justify-content: center;
+}
+
+.title-album-type {
+    padding: 30px 0;
+    align-self: baseline;
+}
+
+.album-title {
+    padding-bottom: 14px;
+    padding-top: 17px;
+}
+
+.artist {
+    padding-bottom: 14px;
 }
 
 /* MEDIA MOBILE */
