--- a/css/app.css
+++ b/css/app.css
@@ -163,6 +163,7 @@ main.main-content {
     width: 100%;
     margin-top: 90px;
     padding: 0 20px;
+    overflow: auto;
 }
 
 .row {
@@ -384,8 +385,12 @@ main.main-content {
     font-size: 17px;
 }
 
-.container-big img {
+/* .container-big img {
     max-width: 270px;
+} */
+
+.recent {
+    align-items: baseline;
 }
 
 .recent a {
@@ -406,8 +411,28 @@ main.main-content {
     padding-top: 17px;
 }
 
+.recent h3 {
+    max-width: 270px;
+}
+
 .artist {
     padding-bottom: 14px;
+}
+
+.for-u-title h2 {
+    padding-bottom: 13px;
+}
+
+.for-u a {
+    margin-right: 15px;    
+}
+
+.for-u h3 {
+    max-width: 270px;
+}
+
+.for-u img {
+    max-width: 260px;
 }
 
 /* MEDIA MOBILE */
